Fix overflow body y

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body {
-  @apply bg-neutral-900;
+  @apply bg-neutral-900 overflow-x-hidden;
 }
 
 .content {
